project2/test/test_11710204_2.spl
int test_11710204_2()
{
  int a = 1;
  int b = 2;
  int c = add(a,b);
  return c;
}
